--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,34 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #FF8DCB;
+  --title-color: #FFC2E6;
+  --contrast-color: #353430;
+  --main-text-color: #353430;
+  --header-bg-image: url('../images/cover-image-light.png');
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  background-color: var(--contrast-color);
+  background-image: var(--header-bg-image);
 }
+
+.theme-light .header__deco {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color: #FF8DCB;
+    --title-color: #FFC2E6;
+    --contrast-color: #353430;
+    --main-text-color: #353430;
+    --header-bg-image: url('../images/cover-image-light.png');
+  }
+
+  .header__deco {
+    display: none;
+  }
+}
+
