--- a/styles/light.css
+++ b/styles/light.css
@@ -1,42 +1,54 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-  --accent-color: #FF8DCB;
-  --title-color: #FFC2E6;
-  --contrast-color: #353430;
-  --main-text-color: #353430;
-  --header-bg-image: url('../images/cover-image-light.png');
+
+  --bg-color: #fff1f7;
+  --accent-color: rgba(255, 141, 203, 1);
+  --title-decoration-bg-color: rgba(255, 141, 203, 1);
+  --shadow-color: rgba(255, 141, 203, 1);
+  --link-shadow-color: rgba(255, 141, 203, 1);
+  --button-hover-outline: rgba(50, 49, 45, 0.4);
+  
+  --not-accent-color: rgba(53, 52, 48, 1);
+  --title-decoration-text-color: rgba(53, 52, 48, 1);
+  --header-color: rgba(255, 194, 230, 1);
+  
+  --bg-image: url("../images/cover-image-light.png");
+  
+  --visible: hidden;
 }
 
 .theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
-  background-color: var(--contrast-color);
-  background-image: var(--header-bg-image);
-}
-
-.theme-light .header__deco {
-  display: none;
+  --bg-color: #fff1f7;
+  --accent-color: rgba(255, 141, 203, 1);
+  --title-decoration-bg-color: rgba(255, 141, 203, 1);
+  --shadow-color: rgba(255, 141, 203, 1);
+  --link-shadow-color: rgba(255, 141, 203, 1);
+  --button-hover-outline: rgba(50, 49, 45, 0.4);
+  
+  --not-accent-color: rgba(53, 52, 48, 1);
+  --title-decoration-text-color: rgba(53, 52, 48, 1);
+  --header-color: rgba(255, 194, 230, 1);
+  
+  --bg-image: url("../images/cover-image-light.png");
+  
+  --visible: hidden;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    --accent-color: #FF8DCB;
-    --title-color: #FFC2E6;
-    --contrast-color: #353430;
-    --main-text-color: #353430;
-    --header-bg-image: url('../images/cover-image-light.png');
-  }
-
-  .header__deco {
-    display: none;
+  .page {
+    --bg-color: #fff1f7;
+    --accent-color: rgba(255, 141, 203, 1);
+    --title-decoration-bg-color: rgba(255, 141, 203, 1);
+    --shadow-color: rgba(255, 141, 203, 1);
+    --link-shadow-color: rgba(255, 141, 203, 1);
+    --button-hover-outline: rgba(50, 49, 45, 0.4);
+    
+    --not-accent-color: rgba(53, 52, 48, 1);
+    --title-decoration-text-color: rgba(53, 52, 48, 1);
+    --header-color: rgba(255, 194, 230, 1);
+    
+    --bg-image: url("../images/cover-image-light.png");
+    
+    --visible: hidden;
   }
 }
-
