--- a/styles/style.css
+++ b/styles/style.css
@@ -1,312 +1,293 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-  font-family: 'IBM Plex Mono';
-  background-color: var(--contrast-color);
-  background-image: var(--header-bg-image);
-  background-position: center;
-  background-size: cover;
+  background-color: var(--bg-color);
+  font-family: var(--main-font);
+  font-size: var(--font-size);
+  color: var(--not-accent-color);
+  line-height: var(--line-height);
   background-attachment: fixed;
 }
 
 .header {
+  background-image: var(--bg-image);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr min-content 1fr;
-  padding: var(--indent);
+  grid-template-rows: 1fr min-content 1fr auto;
+  align-items: center;
+  justify-items: end;
+  padding: var(--padding);
+}
+
+.header__rec {
+  position: absolute;
+  text-transform: uppercase;
   color: var(--accent-color);
+  inset-block-start: var(--padding);
+  inset-inline-end: calc(var(--padding) + 3px + 25px);
+  visibility: var(--visible);
+}
+
+.header__rec::after {
+  content: "";
+  position: absolute;
+  block-size: 5px;
+  inline-size: 5px;
+  border-radius: 50%;
+  color: var(--accent-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 0px 4px 4px var(--accent-color);
+  inset-inline-end: -18px;
+  inset-block-start: 9px;
+  visibility: var(--visible);
+}
+
+.decorated-zone {
   height: 100vh;
   min-height: 668px;
+  position: relative;
 }
 
-.header__deco {
-  position: absolute;
-  top: var(--indent);
-  right: calc(var(--indent) + 10px);
-}
-
-.header__deco::after {
-  content: "";
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  background-color: var(--accent-color);
-  border-radius: 50%;
-  filter: blur(1px);
-  margin-inline-start: 10px;
-}
-
-.header__theme-menu::before {
+.decorated-zone::before {
   content: "";
   position: absolute;
-  right: var(--indent);
-  top: var(--indent);
-  width: 25px;
-  height: 25px;
-  border-inline-end: thin solid var(--accent-color);
-  border-block-start: thin solid var(--accent-color);
+  inset-inline-start: var(--padding);
+  inset-block-end: var(--padding);
+  inline-size: 25px;
+  block-size: 25px;
+  border-block-end: 1px solid var(--accent-color);
+  border-inline-start: 1px solid var(--accent-color);
+}
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  inline-size: 25px;
+  block-size: 25px;
+  border-block-start: 1px solid var(--accent-color);
+  border-inline-end: 1px solid var(--accent-color);
+  inset-inline-end: var(--padding);
+  inset-block-start: var(--padding);
 }
 
-.header__theme-menu {
-  align-self: center;
-  justify-self: end;
+.header__theme-menu-button {
+  color: var(--accent-color);
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--button-hover-outline);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+} 
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--accent-color);
+  pointer-events: none;
 }
 
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-}
-
-.header__theme-menu-button {
-  text-transform: lowercase;
-  background-color: transparent;
-  border: none;
-  line-height: 18px;
-}
-
-.header__theme-menu-button_active {
-  pointer-events: none;
-  outline: thin solid var(--accent-color);
-}
-
-.header__theme-menu-button:hover {
-  outline: thin solid var(--accent-color);
-}
-
-.header__theme-menu-button:focus-visible {
-  border-bottom: thin solid var(--accent-color);
+  gap: 13px;
 }
 
 .header__title {
-  font-weight: 700;
-  font-size: var(--title-font-size);
-  line-height: 83%;
-  letter-spacing: 0;
-  color: var(--title-color);
-  text-shadow: 4px 4px 0 var(--accent-color);
+  color: var(--header-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  font-weight: var(--header-weight);
+  text-shadow: 4px 4px 0 var(--shadow-color);
 }
 
 .header__description {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 23.4px;
-  letter-spacing: 0;
-  block-size: min-content;
-  justify-self: center;
+  width: 100%;
+  justify-self: end;
   align-self: center;
 }
 
-.title-decor {
-  background-color: var(--accent-color);
-  color: var(--contrast-color);
+.title-decoration {
+  background-color: var(--title-decoration-bg-color);
+  color: var(--title-decoration-text-color);
 }
 
-.header__description::after {
-  content: "";
-  position: absolute;
-  left: var(--indent);
-  bottom: var(--indent);
-  width: 25px;
-  height: 25px;
-  border-inline-start: thin solid var(--accent-color);
-  border-block-end: thin solid var(--accent-color);
-}
-
-.main-content {
-  padding: var(--main-indent) var(--indent);
+.content {
   display: grid;
-  grid-template-columns: 1fr;
-  row-gap: var(--main-gap);
+  gap: var(--sections-gap);
+  padding: var(--vertical-padding) var(--padding);
 }
 
-.main__section {
-  display: flex;
-  flex-direction: column;
-  gap: var(--main-section-gap);
+.section {
+  display: grid;
+  grid-auto-flow: row;
+  gap: var(--articles-gap);
 }
 
-.main__section__title {
-  font-weight: 700;
-  font-size: 18px;
+.section__title {
   color: var(--accent-color);
+  font-size: var(--font-size);
+  font-weight: var(--header-weight);
+  line-height: var(--line-height);
 }
 
-.main__section__text {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 23.4px;
-  color: var(--main-text-color);
-  padding-block-start: var(--indent);
+.theme__text {
+  color: var(--not-accent-color);
+  font-size: var(--font-size);
+  line-height: var(--line-height);
+  font-weight: var(--text-weight);
 }
 
-.less-bold {
-  font-weight: 400;
+.section__themes {
+  display: grid;
+  gap: var(--articles-gap);
 }
 
-.link-deco {
+.theme {
+  display: grid;
+  gap: 10px;
+  grid-template-rows: min-content auto;
+}
+
+.header__description,
+.section__themes > .section__title,
+.theme__title {
+  font-size: var(--font-size);
+  font-weight: var(--header-weight);
+  line-height: var(--line-height);
+}
+
+.third .theme .theme__title {
+  font-weight: var(--text-weight);
+}
+
+.theme__text .research-link {
   text-decoration: none;
-  text-shadow: 2px 1px 0 var(--accent-color);
+  text-shadow: 2px 2px var(--link-shadow-color);
 }
 
-.link-deco:hover {
-  text-decoration: underline;
+.theme__text .research-link:hover {
+  outline: none;
+  border-bottom: 1px solid var(--not-accent-color);
 }
 
-.link-deco:focus {
+.theme__text .research-link:focus {
   outline: none;
 }
 
-.link-deco:focus-visible {
-  outline: thin solid var(--accent-color);
+.theme__text .research-link:focus-visible {
+  outline: 1px solid var(--not-accent-color);
 }
 
-.gallery {
+.article__images {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
+  gap: var(--padding);
 }
 
-.gallery-item {
-  padding-block-start: var(--indent);
-  max-width: 100%;
+.article__images-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .footer {
-  position: relative;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr min-content 1fr;
-  padding: var(--indent);
-  height: 100vh;
-  min-height: 668px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: var(--padding);
 }
 
 .footer__title {
-  font-weight: 700;
-  font-size: 116px;
-  line-height: 83%;
-  letter-spacing: 0;
-  color: var(--title-color);
-  text-shadow: 2px 2px 0 var(--accent-color);
-  grid-row: 2/3;
-  justify-self: center;
+  text-shadow: 2px 2px 0 var(--shadow-color);
+  color: var(--header-color);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 82.5%;
+  font-weight: var(--header-weight);
 }
 
-.footer__title::before {
-  content: "";
-  position: absolute;
-  right: var(--indent);
-  top: var(--indent);
-  width: 25px;
-  height: 25px;
-  border-inline-end: thin solid var(--accent-color);
-  border-block-start: thin solid var(--accent-color);
-}
-
-.footer__title::after {
-  content: "";
-  position: absolute;
-  left: var(--indent);
-  bottom: var(--indent);
-  width: 25px;
-  height: 25px;
-  border-inline-start: thin solid var(--accent-color);
-  border-block-end: thin solid var(--accent-color);
-}
-
-@media (min-width: 768px) {
-  .header,
-  .footer {
-    min-height: 1024px;
+@media (width >= 768px) {
+  :root {
+    --padding: 20px;
+    --vertical-padding: 60px;
+    --sections-gap: 80px;
   }
 
-  .main__section {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    column-gap: var(--indent);
+  .first,
+  .third {
+    grid-template-columns: 1fr 2fr;
   }
 
-  .main__section__title {
-    grid-column: 1/2;
+  .article__images-image:nth-child(1) {
+    grid-column: 1 / 3;
     grid-row: 1;
   }
 
-  .main__section__content {
-    grid-column: 2/4;
-    grid-row: auto;
+  .article__images-image:nth-child(2) {
+    grid-row: 1 / 3;
+    grid-column: 3;
   }
 
-  .main__section:nth-last-child(1) {
-    display: block;
+  .article__images-image:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2 / 4;
   }
 
-  .middle-section {
-    grid-column: auto;
+  .article__images-image:nth-child(4) {
+    grid-column: 2;
     grid-row: 2;
   }
 
-  .gallery {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr 1fr auto;
-    column-gap: var(--indent);
+  .article__images-image:nth-child(5) {
+    grid-column: 2 / 4;
+    grid-row: 3;
   }
 
-  .gallery-item {
-    display: block;    
-    min-height: 100%;
-    min-width: 100%;
-    object-fit: cover;
-    object-position: center;
+  .footer__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
-  .gallery-item:nth-child(1) {
-    grid-column: span 2;
-    grid-row: 1/2;
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    justify-self: left;
   }
 
-  .gallery-item:nth-child(2) {
-    grid-column: 3;
-    grid-row: span 2;
+  .header__description {
+    width: 50%;
   }
 
-  .gallery-item:nth-child(3) {
-    grid-column: 1/2;
-    grid-row: 2/4;
+  .article__images {
+    gap: 20px;
   }
-
-  .gallery-item:nth-child(5) {
-    grid-column: 2/4;
-    grid-row: 3/4;
+  .second .section__title {
+    width: calc(100% / 3 - var(--articles-gap));
   }
 }
 
-@media (min-width: 1024px) {
-  .header,
-  .footer {
-    min-height: 768px;
+@media (width >= 1024px) {
+  .second .section__themes {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .first,
+  .third {
+    grid-template-columns: calc((100% - 2 * var(--articles-gap)) / 3) 1fr;
   }
 
   .header__theme-menu {
-    margin-block-start: 0px;
-    margin-block-end: 273px;
-    align-self: flex-start;
     justify-self: center;
+    align-self: start;
   }
 
   .header__theme-menu-list {
     flex-direction: row;
-  }
-
-  .header__description {
-    max-width: 50%;
-    justify-self: end;
-  }
-
-  .middle-section {
-    grid-column: auto;
-    grid-row: 2;
+    gap: 36px;
   }
 }
