--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,33 +1,27 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
-
 :root {
+  --main-font: 'IBM Plex Mono', monospace;
+  --font-size: 18px;
+  --line-height: 130%;
+  --text-weight: 400;
+  --header-weight: 700;
+  
+  --bg-color: #000028;
   --accent-color: #FF0070;
-  --title-color: #DB00FF;
-  --contrast-color: #000028;
-  --title-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  --main-text-color: #F1B2CE;
-  --header-bg-image: url('../images/cover-image-dark.png');
-  --indent: 10px;
-  --main-indent: 40px;
-  --main-gap: 50px;
-  --main-section-gap: 20px;
-}
+  --title-decoration-bg-color: rgba(255, 0, 112, 1);
+  --shadow-color: #FF0070;
+  --link-shadow-color: #ff0070;
+  --button-hover-outline: rgba(255, 0, 112, 0.4);
+  
+  --not-accent-color: rgba(241, 178, 206, 1);
+  --title-decoration-text-color: rgba(0, 0, 40, 1);
+  --header-color: rgba(219, 0, 255, 1);
+  
+  --bg-image: url("../images/cover-image-dark.png");
+  
+  --padding: 10px;
+  --vertical-padding: 40px;
+  --sections-gap: 50px;
+  --articles-gap: 20px;
 
-@media (width >= 768px) {
-  :root {
-    --indent: 20px;
-    --main-gap: 60px;
-  }
-}
-
-@media (width >= 1024px) {
-  :root {
-    --indent: 20px;
-    --main-gap: 60px;
-    --title-font-size: 157px;
-    --header-description-margin: 114px;
-  }
+  
 }
